fixing version mobile

--- a/Public/sass/variavel.scss
+++ b/Public/sass/variavel.scss
@@ -99,7 +99,7 @@ header{
     margin-top: -28%;
     position: absolute;
     @include mobile(){
-        margin-top: 10%;
+        margin-left: 10%;
         margin-top: -167%;
     }
 }
